--- a/AyurvedicStoreProj/store/templates/base.html
+++ b/AyurvedicStoreProj/store/templates/base.html
@@ -6,15 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'store/style.css'%}" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <title> {% block title %} {% endblock %}</title>
     
 </head>
 <body>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <h3> <a href="{% url 'index' %}"> Home page </a> </h3>
+    
     {% block content %} 
+
     {% endblock %}
-    <h3><a href="{% url 'logouturl' %}"> LogOut </a><h3>
+    <h4>
+        <ul>
+            
+            <li>
+            <a href="{% url 'productdetailurl' %}"> View Products </a> </li>
+            <li>
+            <a href="{% url 'relatedproducturl' %}"> View Related Produtcs </a> </li>
+            <li>
+                <a href="{% url 'customerfeedbackurl' %}"> Customer Feedback </a> </li>
+            <li>
+                <a href="{% url 'feedbacksurl' %}"> View Feedbacks </a> </li>
+            <li>
+            <a href="{% url 'logouturl' %}"> LogOut </a> 
+            </li>
+        
+        </ul>
+    </h4>
     
 </body>
 </html>
