--- a/AyurvedicStoreProj/store/static/store/style.css
+++ b/AyurvedicStoreProj/store/static/store/style.css
@@ -1,5 +1,9 @@
 body{
     font-family:sans-serif;
-    color:cornflowerblue;
-    background-color: floralwhite;
+    color:darkslategrey;
+    background-color:burlywood;
+}
+
+.content{
+    color: green;
 }
