--- a/AyurvedicStoreProj/store/templates/store/Feedbacks.html
+++ b/AyurvedicStoreProj/store/templates/store/Feedbacks.html
@@ -4,19 +4,24 @@
      
 {% block content %} 
  
-<h1> Feedbacks </h1><ul>
+<h2> Feedbacks </h2><ul>
 {%for item in items%}
     {% autoescape off %}
         
-    <a href="{% url 'feedbackurl' item.pk %}">
+    
     {%if not item.submitter == "Robot" %} 
 
-        <li>  {{item.body | escape}} is submitted by {{item.submitter | escape}} on {{item.createdon}} </li>
+        <li> Submitter : {{item.submitter | escape}} on {{item.createdon}} <br/>
+            Body: {{item.body | escape}} 
+        </li>
     {%else%}
-        <li> {{item.body | safe}} is submitted by {{item.submitter}} on {{item.createdon}} </li>
+    <li> Submitter : {{item.submitter | safe}} on {{item.createdon}} <br/>
+        Body: {{item.body | escape}} 
+    </li>
 
     {% endif%}
-    </a>
+    <a href="{% url 'feedbackurl' item.pk %}"> view Feedback </a>
+    <hr/>
     {% endautoescape %}
 {%endfor%}
 </ul>
