--- a/AyurvedicStoreProj/store/templates/store/listproduct.html
+++ b/AyurvedicStoreProj/store/templates/store/listproduct.html
@@ -3,6 +3,10 @@
 {% block title %} List Products  {% endblock %}
      
 {% block content %} 
+{% comment “TODO” %}
+ To Do <pre> {% debug %} </pre>
+{% endcomment %}
+
 
     {% if messages %}
         <ul class="messages"> 
